增加class文件